compiler/tests/invalid_programs/variables/unbalanced_variable_assignment.jm
?!SemanticError

if false
  var = 12
end

puts(var)
